<resources>
    <string name="app_name">MPOSH</string>
    <string name="tab_text_1">Погода</string>
    <string name="tab_text_2">День</string>
    <string name="tab_text_3">Месяц</string>
    <string name="tab_text_4">Год</string>
    <string name="current_country">Current city</string>
    <string name="country_example">Moscow Example</string>
    <string name="choose_country">Choose city</string>
    <string name="current_day">Current day</string>
    <string name="day_example">21 March</string>
    <string name="choose_day">Choose day</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
</resources>